src/test/ui/feature-gates/feature-gate-used-on-fn-def.stderr
error[E0658]: `#[used]` on a function definition is currently unstable
  --> $DIR/feature-gate-used-on-fn-def.rs:1:1
   |
LL | #[used]
   | ^^^^^^^
   |
   = note: see issue #93798 <https://github.com/rust-lang/rust/issues/93798> for more information
   = help: add `#![feature(used_on_fn_def)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
