src/test/ui/feature-gates/feature-gate-used-on-fn-def.rs
#[used] //~ ERROR `#[used]` on a function definition is currently unstable
fn foo() {}

fn main() {}
